[tool.poetry]
name = "pawn"
version = "0.1.0"
description = ""
authors = ["Zbigniew Żołnierowicz <zbigniew.zolnierowicz@gmail.com>"]
readme = "README.md"
packages = [{ include = "server" }, { include = "test" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.89.1"
sqlalchemy = "^2.0.2"
ruff-lsp = "^0.0.17"
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
ruff = "^0.0.243"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
