[tool.poetry]
name = "pawn"
version = "0.1.0"
description = ""
authors = ["Zbigniew Żołnierowicz <zbigniew.zolnierowicz@gmail.com>"]
readme = "README.md"
packages = [{ include = "server" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi = "^0.89.1"
sqlalchemy = "^2.0.2"
ruff-lsp = "^0.0.17"
pydantic = {extras = ["email"], version = "^1.10.4"}
http-constants = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
ruff = "^0.0.243"
alembic = "^1.9.3"
pytest-sugar = "^0.9.6"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
addopts = [
	"--cov",
	"--cov-report=xml"
]

[tool.ruff]
select = ["F", "COM", "TRY", "I", "ANN", "UP", "S", "N", "PL", "TID", "PTH", "ERA", "RUF", "TRY"]
src = ["server", "migrations"]

[tool.ruff.flake8-type-checking]
strict = true

[tool.ruff.per-file-ignores]
"**/test_*.py" = ["S101"]

[tool.ruff.isort]
force-wrap-aliases = true
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
